# aws-open-payments-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
docs/dailyreadme/: day2_readme.md  day3_readme.md
docs/design-notes/: day1_design_notes.md  day1_s3_setup.md  day2_design_notes.md  day3_design_notes.md
infra/: iamrole.json
infra/cloudformation/: day1_ec2_runner.yml  day1_s3_datalake.yml  day2_glue_athena.yaml  day3_glue_etl.yaml
scripts/: audit_raw_csv_schema.py  openpayments_companies_totals_by_year.json  openpayments_general_payments_download_2023.py  openpayments_general_payments_download_2024.py  pyproject.toml  recordstotal.py
