[project]
name = "aws-open-payments-pipeline"
version = "0.1.0"
description = "Production-grade AWS data ingestion pipeline for CMS Open Payments data"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "boto3>=1.34.0",
]

[tool.uv]
dev-dependencies = []
